--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: czg.etg@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Digital Garden
 baseurl: "jp" # the subpath of your site, e.g. /blog
-url: "https://czg-es.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #permalink: none
 permalink: /:year/:month/:title:output_ext
 # twitter_username: jekyllrb
