--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Czg
 email: czg.etg@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Digital Garden
-baseurl: "jp" # the subpath of your site, e.g. /blog
+baseurl: "/jp" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #permalink: none
 permalink: /:year/:month/:title:output_ext
