--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/jp" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #permalink: none
-permalink: /:year/:month/:title:output_ext
+#permalink: /:year/:month/:title:output_ext
 # twitter_username: jekyllrb
 #github_username:  czg-es
 linkedin_username: czg-es
